# cppgame

./: CMakeLists.txt  Main.cpp  README.md
src/: Core.cpp  Core.h  Entity.cpp  Entity.h  Global.cpp  Global.h  SceneManager.cpp  SceneManager.h
src/Scenes/: Gameplay.cpp  Gameplay.h  Menu.cpp  Menu.h
src/components/: Ball.h
src/helpers/: Draw.h  DrawRect.h  DrawText.h  vec2.h
src/scenes/: Gameplay.cpp  Gameplay.h  Menu.cpp  Menu.h
